#1 #2 #3 refactor et corrections de bugs